# Generative_AI

fastapi_class1/: Dockerfile  README.md  pyproject.toml
fastapi_class1/fastapi_class1/: main.py
fastapi_class1/tests/: test_fastapi_class1.py
fastapi_dockerimage/: Dockerfile  README.md  pyproject.toml
